# AuraLinkRTC

./: .gitignore  AIC_PROTOCOL_IMPLEMENTATION_COMPLETE.md  AIC_QUICK_START.md  API_DOCUMENTATION.md  BACKEND_CRITICAL_ANALYSIS.md  BACKEND_REMEDIATION_STATUS.md  CODEOWNERS  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  GITHUB_PUSH_GUIDE.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_COMPLETE.md  INGRESS_EGRESS_FINAL_100_PERCENT_COMPLETE.md  MONOREPO.md  MONOREPO_SETUP_COMPLETE.md  Makefile  PRODUCTION_READINESS_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START.md  README.md  SECRETS_SECURITY_GUIDE.md  TASK_COMPLETION_SUMMARY.md  current1_part1.md  current1_part2.md  current1_part3.md  docker-compose.production.yml  flowanalyse1.md  latestAN.md
.github/: PULL_REQUEST_TEMPLATE.md
AuraLinkDocs/: AIC<P.md  AuraID.md  Auth.md  BIGPLAN.md  SDKs.md  bigvision.md  coreai.md  feature1.md  feature2.md  folder.md  framework.md  livekitAIC.md  plan2.md  researchAIC.md  sdkplan.md  teach.md
auralink-ai-core/: .dockerignore  Dockerfile  main.py  requirements.txt
auralink-communication-service/: .env.example  .env.template  COMMUNICATION_SERVICE_API_DOCS.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  main.py
auralink-dashboard-service/: .dockerignore  Dockerfile  go.mod  go.sum
auralink-ingress-egress/: AURALINK_INTEGRATION_README.md  Dockerfile  README_IMPLEMENTATION.md  docker-entrypoint.sh
auralink-webrtc-server/: livekit.yaml
shared/libs/python/: pyproject.toml
shared/libs/python/auralink_shared/: __init__.py  auth.py  config.py  errors.py  resilience.py
(+211 files in other folders)
